DetourActivity error handling, webview error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,6 @@
     <string name="no_departures">No scheduled arrivals for today.</string>
     <string name="loading">loading</string>
     <string name="opposite_error">Opposite station does not exist.</string>
-    <string name="network_error">No internet connection.</string>
     <string name="timed_out_error">Connection timed out.</string>
     <string name="unknown_error">Something went wrong. Please try again. - %1$d</string>
     <string name="refresh">Refresh</string>
@@ -39,7 +38,7 @@
     <string name="detours">Detours</string>
     <string name="data_is_from">Data about detours are obtained from <b>www.lpp.si/obvozi</b></string>
     <string name="click_for_more">Click for more.</string>
-    <string name="error_loading">Error during loading, try again.</string>
+    <string name="error_loading">Error during loading.</string>
     <string name="news">News</string>
     <string name="lpp_news_webside" translatable="false">https://www.lpp.si/novice-kategorija/aktualno</string>
     <string name="app_version">Version 2.0.2</string>
@@ -55,5 +54,6 @@
     <string name="add_favorites">Add favorites</string>
     <string name="try_again">Try again</string>
     <string name="no_internet_connection">No internet connection</string>
+    <string name="there_are_currently_no_detours">There are currently no detours.</string>
 
 </resources>
