--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -30,7 +30,6 @@
     <string name="opposite_error">Nasprotna postaja ne obstaja.</string>
     <string name="timed_out_error">Povezava je potekla.</string>
     <string name="unknown_error">Nekaj je šlo narobe. Prosimo poizkusite še enkrat. - %1$d</string>
-    <string name="refresh">Osveži</string>
     <string name="officially">V sodelovanju z</string>
     <string name="connection_refused">Povezava zavrnjena.</string>
     <string name="departures">Vozni red %s</string>
@@ -49,7 +48,7 @@
     <string name="please_enable_location_permission_in_the_settings">Prosim omogoči lokacijo v nastavitvah telefona.</string>
     <string name="permission_denied">Dovoljenje zavrjeno.</string>
     <string name="add_favorites">Dodaj priljubljene</string>
-    <string name="try_again">Poizkusi ponovno</string>
+    <string name="try_again">Osveži</string>
     <string name="no_internet_connection">Ni internetne povezave</string>
     <string name="there_are_currently_no_detours">Trenutno ni obvozov.</string>
 
