--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="no_internet_connection">No internet connection</string>
     <string name="there_are_currently_no_detours">There are currently no detours.</string>
     <string name="version">Version</string>
+    <string name="follow_system_theme">Follow system theme</string>
 
 </resources>
