Update contact information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="news">News</string>
     <string name="lpp_news_webside" translatable="false">https://www.lpp.si/novice-kategorija/aktualno</string>
     <string name="app_version">Version 2.0.2</string>
-    <string name="travana_contact_mail" translatable="false">info@travana.si</string>
+    <string name="travana_contact_mail" translatable="false">travana@siggsy.xyz</string>
     <string name="relative_time">Relative (eg. 7 min)</string>
     <string name="absolute_time">Absolute (eg. 15:30)</string>
     <string name="select_route">Select route</string>
