--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -52,4 +52,5 @@
     <string name="no_internet_connection">Ni internetne povezave</string>
     <string name="there_are_currently_no_detours">Trenutno ni obvozov.</string>
     <string name="follow_system_theme">Sledi sistemski temi</string>
+    <string name="version">Različica</string>
 </resources>
