--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="try_again">Try again</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="there_are_currently_no_detours">There are currently no detours.</string>
-    <string name="version">Version</string>
+    <string name="version">Version %s</string>
     <string name="follow_system_theme">Follow system theme</string>
 
 </resources>
